--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ body {
     width: 1000px;
     margin: 0 auto;
     text-align: center;
+    background-image: url(../imagenes/body.png);
+    background-size: cover; /* La imagen cubre todo el fondo sin distorsionarse */
+    background-position: center; /* Centra la imagen */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-attachment: fixed; /* La imagen permanece fija al hacer scroll */
 }
 
 canvas {
