--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,78 @@
+@font-face {
+    font-family: 'longreach';
+    src: url(../fuentes/DK_Longreach.otf);
+}
+
 body {
-    width: 1000px;
-    margin: 0 auto;
-    text-align: center;
     background-image: url(../imagenes/body.png);
     background-size: cover; /* La imagen cubre todo el fondo sin distorsionarse */
     background-position: center; /* Centra la imagen */
     background-repeat: no-repeat; /* Evita que la imagen se repita */
     background-attachment: fixed; /* La imagen permanece fija al hacer scroll */
 }
-
+.divCanvas{
+    width: 1000px;
+    margin: 0 auto;
+    text-align: center;
+}
 canvas {
-    background-color: white;
-    border: solid yellow 3px;
+    background-color: #fff;
+    border: solid #714613 3px;
+}
+
+
+*{
+    margin: 0px;
+    padding: 0px;
+    font-family: 'longreach';
+}
+/* Header and Nav */
+header{
+    text-align: center;
+    position: fixed;
+    width: 100%;
+  /*  background-color: #ed8e37;
+   /* width: 1000px;
+   /* background-color: #fff;
+  /*  background-color:#714613/*#207f5b /*#714613;/*#f8d11f /*#ed8e37;*/
+}
+nav{
+    max-width: 1024px;
+    margin: 0 auto;
+}
+header img{
+    padding: 0 20px;
+}
+
+nav ul{
+    float: center;
+    list-style: none;
+    text-align: center;
+    vertical-align: top;
+    margin: 10px 10px;
+}
+nav li{
+    list-style-type: none;
+    display: inline;
+    
+}
+nav li {
+    font-size: 3em;
+    /*-webkit-text-stroke: 1px #000;
+    text-shadow:
+        3px 3px 0 #000,
+      -1px -1px 0 #000,  
+       1px -1px 0 #000,
+       -1px 1px 0 #000,
+        1px 1px 0 #000;
+    text-decoration: none;*/
+    line-height: 70px;
+    padding: 15px 10px;
+    color: #207f5b;
+  /*  background-color: white;
+  /*  border: 1px solid grey;*/
+}
+nav li a:hover{
+    color: white;
+  /*  background-color: black;*/
 }
